Refactor imports and streamline process options usage within agents